--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-FindYourWay Projekt
+FindYourWay
+
+Benötigt:
+JUNG2-Framework - http://jung.sourceforge.net/
+Java Runtime Environment (JRE) 7 - http://www.oracle.com/technetwork/java/javase/downloads/
