Bilder-Quellen in Readme

--- a/README
+++ b/README
@@ -21,4 +21,13 @@ Marcel N. (aquanar)
 Contributors:
 
 Fabian M. (fate83)
-- (fxbrk) 
+--- (fxbrk) 
+
+
+Verwendete Bilder:
+
+"Wikipedia-Beispiel-Map.gif" aus Wikipedia
+http://de.wikipedia.org/w/index.php?title=Datei:Dijksta_Anim.gif
+
+"Cities-Map.jpg" aus Wikipedia
+http://de.wikipedia.org/w/index.php?title=Datei:Großstädte_historisch.png
