--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 FindYourWay
 
+Awesome Project by Mentoring Group FM
+
 
 Requirements:
 
@@ -24,7 +26,7 @@ Fabian M. (fate83)
 --- (fxbrk) 
 
 
-Verwendete Bilder:
+Images used:
 
 "Wikipedia-Beispiel-Map.gif" aus Wikipedia
 http://de.wikipedia.org/w/index.php?title=Datei:Dijksta_Anim.gif
