--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 FindYourWay
 
-Awesome Project by Mentoring Group FM
+Awesome Project by Mentoring-Group FM
+First semester, university of applied sciences
+Well done (:
 
 
 Requirements:
@@ -28,8 +30,8 @@ Fabian M. (fate83)
 
 Images used:
 
-"Wikipedia-Beispiel-Map.gif" aus Wikipedia
+"Wikipedia-Beispiel-Map.gif" from Wikipedia
 http://de.wikipedia.org/w/index.php?title=Datei:Dijksta_Anim.gif
 
-"Cities-Map.jpg" aus Wikipedia
+"Cities-Map.jpg" from Wikipedia
 http://de.wikipedia.org/w/index.php?title=Datei:Großstädte_historisch.png
